sync.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sshd
spec:
  containers:
  - name: sshd
    image: panubo/sshd
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "80Mi"
        cpu: "50m"
    ports:
    - containerPort: 22
    volumeMounts:
      - mountPath: "/share/mail"
        name: mail
      - mountPath: "/share/updates"
        name: updates
      - mountPath: /root/.ssh/authorized_keys
        name: authorized-keys
        subPath: id_rsa.pub
  imagePullSecrets:
  - name: regcred
  volumes:
    - name: mail
      persistentVolumeClaim:
        claimName: smtp-dump
    - name: updates
      persistentVolumeClaim:
        claimName: update-tracker
    - name: authorized-keys
      configMap:
        name: ssh-authorized-keys
