deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-tracker
spec:
  selector:
    matchLabels:
      app: update-tracker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: update-tracker
    spec:
      containers:
      - name: smtp-dump
        image: rg.nl-ams.scw.cloud/njkonl/smtp-dump:0.1.1
        terminationMessagePolicy: FallbackToLogsOnError
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "80Mi"
            cpu: "50m"
        ports:
        - containerPort: 25
          hostPort: 25
        volumeMounts:
          - mountPath: "/mail"
            name: mail
      - name: update-tracker
        image: rg.nl-ams.scw.cloud/njkonl/update-tracker:0.2.19
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/mail"
            name: mail
          - mountPath: "/updates"
            name: updates
          - mountPath: "/gitgovuk"
            name: gitrepo
          - mountPath: /root/.ssh
            name: ssh-key
            readOnly: true
      imagePullSecrets:
      - name: regcred
      volumes:
        - name: mail
          persistentVolumeClaim:
            claimName: smtp-dump
        - name: updates
          persistentVolumeClaim:
            claimName: update-tracker
        - name: gitrepo
          persistentVolumeClaim:
            claimName: gitgov-repo
        - name: ssh-key
          secret:
            secretName: gitgov-repo-sshcreds
            defaultMode: 0600

---

apiVersion: v1
kind: Service
metadata:
  name: update-tracker
spec:
  selector:
    app: update-tracker
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: update-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: govdiff.njk.onl
    http:
      paths:
      - path: /
        backend:
          service:
            name: update-tracker
            port:
              number: 80
        pathType: Prefix
  tls:
  - hosts:
    - govdiff.njk.onl
    secretName: govdiff-cert
